social media buttons spacing fixed

--- a/layout/styles/custom.css
+++ b/layout/styles/custom.css
@@ -41,16 +41,14 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 #rss-bttn:hover { background-position: 0 0px; }
 #rss-bttn span { display: none; }
 
-.twitter-follow-button { display: inline-block; padding-right: 12px; }
-.g-follow-button { display: inline-block; padding-right: 12px; }
-.g-plusone-button { display: inline-block; padding-left: 12px; }
+/* social media buttons */
+.twitter-follow-button { display: inline-block; padding-right: 8px; }
+.google-follow-button { display: inline-block; padding-right: 8px; }
+.google-plusone-button { display: inline-block; }
 
-
+/* Google custom search */
 #header #header-search{ display: inline-block; float: right; width: auto; clear: right; }
 #header #header-search { margin-top: 21px; }
-
-/* #header #header-logo, #header #header-contact, #header #header-search { vertical-align: bottom; }
-*/
 
 #cse-search-box input.search-bttn {	display: inline-block; font-size: 0; line-height: 0; text-indent: -4000px; cursor: pointer;
 					width: 32px; height: 32px; border: 0; background: url(images/looking-glass.png) no-repeat 0 0; }
